# libnsfb

./: Makefile.am  Makefile.in  README.md  aclocal.m4  bld  configure  configure.ac  cursor.c  cursor.h  dump.c  font_freetype.c  font_freetype.h  input.c  libnsfb.c  libnsfb.h  libnsfb.pc.in  libnsfb_cursor.h  libnsfb_plot.h  libnsfb_plot_util.h  libnsfb_plotx.h  nsfb.h  nsfbPlot.h  nsfbcfg.h.in  palette.c  palette.h  plot.h  plot_style.h  resize.c  slack-desc  surface.h  w32.h  x11.h
arena/: .Makefile.am.swp  Makefile.am  Makefile.in  bitmap.c  nsglobe.c  polystar.c  polystar2.c  tspeed.c
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
codeblocks/: libnsfb.cbp
drivers/: x11.c
img/: Makefile  bfind.c  config.status  cursor.lo  dither.c  freetype.c  icons.c  images.h  libnsfb.la  libnsfb.lo  libtool  nsfb-X11.la  nsfb-drm.la  nsfb-gif.la  nsfb-jpg.la  nsfb-png.la  nsfb-svg.la  nsfb-vga.la  nsfbcfg.h  nsglobe.lo  palette.lo  parsec.c  printer.c  resize.c  stamp-h1  vectors.c
img/.deps/: cursor.Plo  dump.Plo  libnsfb.Plo  nsglobe.Plo  palette.Plo  vectors.Tpo
img/.libs/: libnsfb.la  libnsfb.lai  nsfb-X11.la  nsfb-X11.lai  nsfb-drm.la  nsfb-drm.lai  nsfb-gif.la  nsfb-gif.lai  nsfb-jpg.la  nsfb-jpg.lai  nsfb-png.la  nsfb-png.lai  nsfb-svg.la  nsfb-svg.lai  nsfb-vga.la  nsfb-vga.lai
img/arena/: Makefile
img/arena/.deps/: bitmap.Po
img/formats/: cropgif.c  rdbmp.c  rdgif.c  rdico.c  rdjpeg.c  rdpng.c  rdppm.c  rdrle.c  rdtarga.c  rdxpm.c
img/formats/rdsvg/: color2.c  gradient.c  list.c  rdsvg.c  render.c  svgtiny.c  svgtiny.h  svgtiny_internal.h  xml2dom.c
img/img/: dither.lo  freetype.lo  icons.lo  parsec.lo  printer.lo  resize.lo
img/img/.deps/: dither.Plo  freetype.Plo  icons.Plo  parsec.Plo  printer.Plo  resize.Plo
img/img/formats/: nsfb_gif_la-rdgif.lo  nsfb_jpg_la-rdjpeg.lo  nsfb_png_la-rdpng.lo  rdico.lo  rdxpm.lo
img/img/formats/.deps/: nsfb_gif_la-rdgif.Plo  nsfb_jpg_la-rdjpeg.Plo  nsfb_png_la-rdpng.Plo  rdico.Plo  rdxpm.Plo
img/img/formats/rdsvg/: nsfb_svg_la-color2.lo  nsfb_svg_la-gradient.lo  nsfb_svg_la-list.lo  nsfb_svg_la-rdsvg.lo  nsfb_svg_la-svgtiny.lo  nsfb_svg_la-xml2dom.lo
img/img/formats/rdsvg/.deps/: nsfb_svg_la-color2.Plo  nsfb_svg_la-gradient.Plo  nsfb_svg_la-list.Plo  nsfb_svg_la-rdsvg.Plo  nsfb_svg_la-svgtiny.Plo  nsfb_svg_la-xml2dom.Plo
img/plot/: 16bpp.lo  24bpp.lo  32bpp-xbgr8888.lo  32bpp-xrgb8888.lo  8bpp.lo  api.lo  generic.lo  nsfb_X11_la-x11.lo  util.lo
img/plot/.deps/: 16bpp.Plo  24bpp.Plo  32bpp-xbgr8888.Plo  32bpp-xrgb8888.Plo  8bpp.Plo  api.Plo  generic.Plo  nsfb_X11_la-x11.Plo  util.Plo
img/surface/: linux.lo  nsfb_X11_la-x11.lo  nsfb_drm_la-drm.lo  nsfb_vga_la-linux.lo  ram.lo  surface.lo  vt.lo
img/surface/.deps/: linux.Plo  nsfb_X11_la-x11.Plo  nsfb_drm_la-drm.Plo  nsfb_vga_la-linux.Plo  ram.Plo  surface.Plo  vt.Plo
plot/: 16bpp.c  1bpp.c  24bpp.c  32bpp-common.c  32bpp-xbgr8888.c  32bpp-xrgb8888.c  8bpp.c  api.c  common.c  generic.c  util.c  w32.c  x11.c
src/: pointers.c
surface/: .drm.c.old.swp  .drm.c.swp  .linux.c.swp  drm.c  drm.c.old  drmk.c  k.c  kvs.c  linux.c  ms.c  ram.c  surface.c  uterm_drm3d_render.c  uterm_drm3d_video.c  vnc.c  vt.c  w32.c  x11.c
